<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DevTest</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_settings">Settings</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="radius">Radius</string>
    <string name="get_current_location">Get Current Location</string>
    <string name="save">Save</string>
    <string name="GPSAlertDialogTitle">GPS is setting</string>
    <string name="GPSAlertDialogMessage">GPS is not enabled. Do you want to go to setting menu</string>
    <string name="title_activity_scanning">Scanning</string>

</resources>
