<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    
    android:orientation="vertical"
    tools:context="com.example.devtest.Settings"  
    
    >

    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >
        <EditText 
            android:id="@+id/longitude"
            android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/longitude" 
	        android:inputType="numberDecimal"
            />
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >
        <EditText 
            android:id="@+id/latitude"
            android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/latitude" 
            android:inputType="numberDecimal"
            />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >
        <EditText 
            android:id="@+id/radius"
            android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/radius" 
            android:inputType="numberDecimal"
            />
    </LinearLayout>
    <Button 
        android:id="@+id/getlocation"
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/get_current_location"
	    android:layout_margin="10dp"
        /> 
    
    <Button 
        android:id="@+id/save"
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/save"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:layout_marginTop="10dp"
        />
    
</LinearLayout>
